# news-agent

./: .env  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  setup.py
configs/: news.config.sample.yaml  review_writer.config.sample.yaml
langfuse-service/: docker-compose.yml
news-site/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
news-site/src/: site.config.ts  types.ts  utils.ts
news-site/src/components/: Footer.astro  Header.astro  LightDarkAutoThemeLoader.astro  Modal.astro  NewsGroup.astro  NewsItem.astro  Sidebar.astro  ThemeToggle.astro
news-site/src/data/: news.yaml
news-site/src/layouts/: Layout.astro
news-site/src/pages/: index.astro
news-site/src/styles/: global.css
news-site/src/utils/: loadNewsData.ts
news_agent/: __init__.py
news_agent/agents/news/: agent.py  config.yaml  topics.yaml
news_agent/agents/news/helpers/: deduplication.py  reactive_agent.py  state.py
news_agent/utils/: __init__.py  brave_search.py  config_loader.py  get_embeddings.py  get_llm.py  get_search_tool.py
